Bug 124323 - toggeling settings - e.g. threaded calculations - need restart, UI unclear about this
Summary: toggeling settings - e.g. threaded calculations - need restart, UI unclear ab...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks: Options-Dialog-Calc
  Show dependency treegraph
 
Reported: 2019-03-25 12:24 UTC by b.
Modified: 2019-04-04 09:08 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Dialog for OpenGL setting (26.45 KB, image/png)
2019-03-28 14:32 UTC, Heiko Tietze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description b. 2019-03-25 12:24:44 UTC
Description:
it's a similar thing with the user interface being unclear in when and why changes of settings step in duty, as with formatting of cells, at what time the formatting will affect the value in, or input to, the cell. 

(those are questions near philosophy, sorry, but there should be a philosophy for a program, and it should be followed ... imho)

for a user interface being 'nice' to a 'normal simple minded user' i'd recommend that changes as toggeling threaded calculations in calc 'tools - options - libreofficedevcalc - calculate - cpu threading settings - enable multi-threaded calculation' should either: 

- have instant effect, or 

- carry a hint 'restart required', and / or 

- have a signal indicating the status of the program (not the switch) somewhere near the point the setting is done, especially if it's possible that the checkbox deviates from the behaviour, 

(being able to check whether the setting is in effect with 'help - about libreofficedev - and watch for "calc:" versus "calc: threaded"' is somewhat 'unintuitive' and requires some 'special knowledge') 

other behaviour is 'hoodwinking users'? (found that in deepl, not sure if it's the right technical term)

even worse: 'help - about libreoffice' will instantly reflect changes in the checkbox, while for being effective for the program a restart is required. thus if touched the setting the user can't be sure how the real status is until the next restart.  

reg. 

b. 

Steps to Reproduce:
change the mentioned setting, see not getting any hint that a restart is required before it will be followed, 

either check other comments about this point or find a way to check whether the setting is working or not, 

Actual Results:
checkbox changed, signaling in help changed, effect for calculations 'later', 

Expected Results:
either instant effect, or a hint on required restart, 


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.3.0.0.alpha0+ (x64)
Build ID: 5a907fe76bc628629fddb5501727642468d38dae
CPU threads: 8; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-03-22_00:18:04
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded

handling of settings for openGL is not perfect but better than for threading,
Comment 1 Buovjaga 2019-03-28 06:48:46 UTC
(In reply to b. from comment #0)
> for a user interface being 'nice' to a 'normal simple minded user' i'd
> recommend that changes as toggeling threaded calculations in calc 'tools -
> options - libreofficedevcalc - calculate - cpu threading settings - enable
> multi-threaded calculation' should either: 
> 
> - have instant effect, or 

I know there is a report for this, but I cannot find it for the life of me. Logically it should be here: https://bugs.documentfoundation.org/showdependencytree.cgi?id=102187&hide_resolved=1
I tried several Bugzilla searches.
Comment 2 Heiko Tietze 2019-03-28 14:29:59 UTC
On macOS I get a dialog asking to restart now or later. That happens not on Linux (haven't tested Windows). So we should fix the bug - and maybe also show a static text next to the help button "Restart required" and ditch the dialog to not interrupt the workflow.
Comment 3 Heiko Tietze 2019-03-28 14:32:43 UTC
Created attachment 150359 [details]
Dialog for OpenGL setting

Also no dialog though for Calc > Multi-threading.
Comment 4 Xisco Faulí 2019-04-03 16:18:12 UTC
Patch in gerrit: https://gerrit.libreoffice.org/#/c/70210/
Comment 5 Commit Notification 2019-04-04 08:55:35 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/d186417395b29a5404aed3f819dd81aa92385f20%5E%21

tdf#124323: show restart dialog when toggling multi-threaded...

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2019-04-04 09:08:08 UTC
Fixed in master. Apply button doesn't work due to bug 124542