tdf#124323: show restart dialog when toggling multi-threaded...

calculation

Change-Id: I853ae21d4c085488232a375ef42480453c01880b